# codex-design

./: .gitignore  AGENTS.md  DESIGN.md  PRODUCT.md  README.md  development.md  diff.md  diffv2.md  goal.md  index.html  package-lock.json  package.json
.omo/: boulder.json
.omo/evidence/: check-task-03-design-only.cjs  stop-hook-build-1.txt  stop-hook-build-2.txt  stop-hook-build-3.txt  stop-hook-verification-1.txt  stop-hook-verification-2.txt  stop-hook-verification-3.txt  subagent-stop-20-direct-verification-2.txt  subagent-stop-20-direct-verification-3.txt  subagent-stop-20-direct-verification.txt  task-01-current-behavior.txt  task-02-backend-image-residue.txt  task-02-hook-reverify-01.txt  task-02-hook-reverify-02.txt  task-02-hook-reverify-03-required-scenario.txt  task-02-hook-reverify-03-rg.txt  task-02-hook-reverify-03.txt  task-02-hook-reverify-04-rg.txt  task-02-hook-reverify-04.txt  task-02-image-removal.txt  task-03-design-only-pipeline-red.txt  task-03-design-only-pipeline.txt  task-04-backend-reverify.txt  task-04-no-auto-install-claim2.txt  task-04-no-auto-install-reverify.txt  (+27 more)
docs/: image-workspace-architecture.md
scripts/: build.mjs
src/: AGENTS.md  App.tsx  types.ts
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  scaffold.rs
src-tauri/src/scaffold/: AGENTS.md  App.tsx  CODEX_DESIGN.md  DESIGN.md  Screen.tsx  anchors.json  artifacts.json  console-capture.html  designforge.config.json  index.html  package.json  settings.json  styles.css
(+12 files in other folders)
