[package]
name = "designforge"
version = "0.1.0"
description = "Local UI generation workspace"
authors = ["DesignForge"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
zip = { version = "2", default-features = false, features = ["deflate"] }
